# sophon-poc

./: .gitignore  Cargo.toml  build.rs
src/: main.rs
src/protos/: SophonManifest.proto  SophonPatch.proto
src/schemas/: game_branches.rs  mod.rs  sophon_diff.rs  sophon_manifests.rs
